--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,13 @@ click==7.1.2
 Flask==1.1.2
 Flask-DebugToolbar==0.11.0
 Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
 greenlet==1.0.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.3
 MarkupSafe==1.1.1
+psycopg2-binary==2.8.6
 pycparser==2.20
 requests==2.25.1
 six==1.15.0
